media/base/plex/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plex
  annotations:
    metallb.io/allow-shared-ip: "media"
spec:
  type: NodePort
  externalTrafficPolicy: Local
  ports:
    - name: pms
      port: 32400
      protocol: TCP
      targetPort: pms
      appProtocol: http
    - name: metrics
      protocol: TCP
      port: 9594
      targetPort: metrics
      appProtocol: http
    # - name: sqlite-web-http
    #   port: 8080
    #   targetPort: sqlite-web-http
    #   appProtocol: http
  selector:
    deployment: plex
