media/base/plex/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: plex
  annotations:
    console.alpha.openshift.io/overview-app-route: "true"
spec:
  host: plex.apps.homelab.csfreak.com
  port:
    targetPort: pms
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: plex
    weight: 100
  wildcardPolicy: None
# ---
# apiVersion: route.openshift.io/v1
# kind: Route
# metadata:
#   name: plex-db
#   annotations:
#     haproxy.router.openshift.io/rewrite-target: /
#     haproxy.router.openshift.io/ip_whitelist: 192.168.2.0/24
# spec:
#   host: plex.apps.homelab.csfreak.com
#   path: /sqlite-web
#   port:
#     targetPort: sqlite-web-http

#   tls:
#     insecureEdgeTerminationPolicy: Redirect
#     termination: edge
#   to:
#     kind: Service
#     name: plex
#     weight: 100
#   wildcardPolicy: None
